# turbo-design

./: .gitignore  README.md  loss.md  optturb.json  pyproject.toml  requirements.txt
docs/: conf.py
docs/modules/: coolant.rst  enums.rst  inlet.rst  loss.rst  lossinterp.rst  outlet.rst  passage.rst  solve_radeq.rst
examples/EEE/: EEE-HPT.json  case.igs  get_ss_ps.py  hpt_rotor1.igs  hpt_rotor2.igs  hpt_stator1.igs  hpt_stator2.igs  hub.igs  multistage-EEE HPT.py  read_stator_rotor.py
examples/EEE-Kenji/: hub_shroud.pkl  multistage-EEE HPT.py  multistage-EEE HPT.xlsx  stator_rotor.pkl
examples/optturb-multistage/: multistage-fixed_pressure_loss2.py  multistage-fixed_pressure_loss2.xlsx  optturb-multistage.ipynb  optturb.json
examples/optturb-radial-turbine/: multistage-fixed_pressure_loss2.xlsx  optturb-radialturbine.ipynb  optturb.json  radial_sizing.py  radial_turbine_fixed_pressure_loss.py  radial_turbine_fixed_pressure_loss_2.py
examples/optturb-turbine/: optturb-craig_cox.py  optturb-fixed_efficiency.py  optturb-fixed_pressure_loss2.py  optturb-fixed_pressure_loss2.xlsm  optturb-fixed_pressure_loss_match_massflow.py  optturb-traupel.py  optturb.ipynb  optturb.json
references/: OptTurb1D_v02.xlsx  Turbine_Design-Paht.xlsm  turbine1d.m
turbo-design/: __init__.py  bladerow.py  compressorspool.py  coolant.py  isentropic.py  lossinterp.py  outlet.py  passage.py  radeq.py  solve_radeq.py  td_math.py
turbo-design/loss/: __init__.py  (+1 more)
turbodesign/: arrayfuncs.py  bladerow.py  enums.py  inlet.py  rotor.py  spool.py  stage.py  td_math.py  turbinespool.py
(+98 files in other folders)
