[tool.poetry]
name = "turbo-design"
version = "1.0.0"
description = "TurboDesign is a library used to design turbines and compressors using radial equilibrium."
authors = ["Paht Juangphanich <paht.juangphanich@nasa.gov>"]
packages = [
    { include = "turbodesign" }
]

[tool.poetry.dependencies]
pyturbo-aero = "*"
plot3d = "*"
numpy = ">2.1.0"
scipy = "*"
cantera = "*"
findiff = "*"
matplotlib = ">=3.9.2"
pandas = "*"
python = ">=3.10"

[tool.poetry.dev-dependencies]
python = ">=3.10"

[build-system]
requires = ["poetry>=1.1.2"]
build-backend = "poetry.masonry.api"    
