[tool.poetry]
name = "turbo-design"
version = "1.0.8"
description = "TurboDesign is a library used to design turbines and compressors using radial equilibrium."
authors = ["Paht Juangphanich <paht.juangphanich@nasa.gov>"]
packages = [
    { include = "turbodesign" }
]

[tool.poetry.dependencies]
cantera = "*"
pyturbo-aero = "*"
plot3d = "*"
numpy = "*"
scipy = "*"
findiff = "*"
matplotlib = "*"
pandas = "*"
python = ">=3.9"

[tool.poetry.dev-dependencies]
python = ">=3.9"

[build-system]
requires = ["poetry>=1.1.2"]
build-backend = "poetry.masonry.api"    
